k8s/coma/hedgedoc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hedgedoc
  namespace: hedgedoc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "hedgedoc.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hedgedoc
                port:
                  number: 3000
  tls:
    - hosts:
        - "hedgedoc.artichoke.cc"
      secretName: artichokecc-cert
